All_Component_DX/force-app/main/default/objects/SM_Scheduling_Violation__c/fields/SM_Category__c.field-meta.xml
<CustomField>
    <fullName>SM_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Time</fullName>
            </value>
            <value>
                <fullName>Capability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>