All_Component_DX/force-app/main/default/objects/SM_Scheduling_Violation__c/fields/SM_Param_Value_1__c.field-meta.xml
<CustomField>
    <fullName>SM_Param_Value_1__c</fullName>
    <label>Parameter Value 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>