All_Component_DX/force-app/main/default/objects/SM_Scheduling_Violation__c/fields/SM_Param_Value_2__c.field-meta.xml
<CustomField>
    <fullName>SM_Param_Value_2__c</fullName>
    <label>Parameter Value 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>