All_Component_DX/force-app/main/default/objects/SM_Scheduling_Violation__c/fields/SM_Servicemax_Job__c.field-meta.xml
<CustomField>
    <fullName>SM_Servicemax_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ServiceMax Job</label>
    <referenceTo>SVMX_Jobs__c</referenceTo>
    <relationshipLabel>Scheduling Violations</relationshipLabel>
    <relationshipName>Scheduling_Violations1</relationshipName>
    <type>Lookup</type>
</CustomField>