All_Component_DX/force-app/main/default/objects/SM_Scheduling_Violation__c/fields/SM_Technician__c.field-meta.xml
<CustomField>
    <fullName>SM_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipLabel>Scheduling Violations</relationshipLabel>
    <relationshipName>Scheduling_Violations1</relationshipName>
    <type>Lookup</type>
</CustomField>