All_Component_DX/force-app/main/default/objects/SM_Scheduling_Violation__c/fields/SM_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>SM_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipLabel>Scheduling Violations</relationshipLabel>
    <relationshipName>Scheduling_Violations1</relationshipName>
    <type>Lookup</type>
</CustomField>